--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,7 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
+    overflow-y: scroll;
 }
 
 .am_calendar_popup > div a{
@@ -93,3 +94,21 @@ a.inactive:hover{
     outline: none;
     pointer-events: none;
 }
+
+#am_client_info_form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#am_client_info_form input,
+#am_client_info_form textarea
+{
+    display: block;
+}
+
+#am_client_info_form input[type="submit"]{
+    max-width: fit-content;
+    padding: 5px 15px;
+}
+
