Added absences options, added previous month, added finalization of appointment, added animation after making an appointment.

--- a/admin/css/admin-main.css
+++ b/admin/css/admin-main.css
@@ -37,3 +37,7 @@
 .am_appointment.confirmed .appointment_start_date{
     color: green;
 }
+
+.am_calendar.admin .selected{
+    background-color: #c7c6c6;
+}
