--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,18 @@
 .am_calendar{
     border: 1px solid black;
     padding: 10px;
+    position: relative;
+}
+
+.am_calendar.am_success{
+    border-color: chartreuse;
+    text-align: center;
+    font-weight: 600;
+}
+
+#am_calendar_anchor{
+    position: absolute;
+    top: -100px;
 }
 
 .am_calendar_popup{
@@ -32,7 +44,7 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .am_calendar_popup > div a{
@@ -74,6 +86,11 @@
     color: black;
     outline: 1px solid black;
     text-align: center;
+}
+
+.am_calendar_next_month_container{
+    display: flex;
+    justify-content: space-between;
 }
 
 a.inactive .am_calendar_day_box{
